--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "editor.fontFamily": "\"0xProto Nerd Font\",Consolas, 'Courier New', monospace",
-  "editor.fontSize": 16
+  "editor.fontFamily": "'Cascadia Code',Consolas, 'Courier New', monospace",
+  "editor.fontSize": 15
 }
