--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT = 3000
 DB_URL=mongodb+srv://laxmanhenricks94:A5kVPSo0gcL6fApw@cluster0.gfpuiha.mongodb.net/SchoolCool
+LOCALE_DB_URL=mongodb://127.0.0.1:27017/SchoolCool
 DB_NAME=
